--- a/content/AllrunAndAllclean/styles/main.css
+++ b/content/AllrunAndAllclean/styles/main.css
@@ -22,6 +22,10 @@
     .step-image{
         width: 100%;
     }
+    .step-video{
+        max-width: 100%;
+    }
+
   }
 
 
@@ -29,6 +33,10 @@
 .step-image{
     width: 80%;
 }
+.step-video{
+    max-width: 70%;
+}
+
 }
 
 .main-title{
@@ -78,6 +86,38 @@ li{
     background-color: lightgray;
     width: fit-content;
     margin: auto;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    text-align: center;
+}
+
+.short-code-text-container{
+    display: flex;
+    align-self: center;
+    width: fit-content;
+    align-content: center;
+    justify-self: center;
+}
+
+.short-text{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: fit-content;
+    margin: 20px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    text-align: center;
+}
+.short-code-text{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: Consolas,Menlo,"courier new",monospace;
+    font-size: 20px;
+    background-color: lightgray;
+    width: fit-content;
+    margin: 0;
     margin-top: 15px;
     margin-bottom: 15px;
     text-align: center;
@@ -149,3 +189,18 @@ li{
     align-content: center;
     margin-bottom: 20px;
 }
+
+.step-video-container{
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-content: center;
+    align-content: center;
+    margin-bottom: 20px;
+}
+
+.step-video{
+    display: flex;
+    justify-self: center;
+}
+
+
